form working to submit

--- a/client/leaderboards.html
+++ b/client/leaderboards.html
@@ -6,7 +6,7 @@
 	  <div class="mdl-card__supporting-text">	    
 	    <center>
 	    	<h4>Top Activists</h4>
-	    	<p>System launched @ 6am 9/22/15. No tasks submitted so far. Who will be first?</p>
+	    	<p>System launched 9/22/15 @ 4pm. No tasks submitted so far. Who will be first?</p>
 				<table class="mdl-data-table mdl-shadow--2dp">
 				  <thead>
 				    <tr>
