--- a/client/prizes.html
+++ b/client/prizes.html
@@ -27,6 +27,11 @@
 				      <td style="text-align:center">9/21/15</td>
 				      <td style="text-align:center">0.4407</td>
 				    </tr>
+				    <tr>
+				      <td style="text-align:center">Anonymous1</td>
+				      <td style="text-align:center">9/22/15</td>
+				      <td style="text-align:center">0.25</td>
+				    </tr>
 				  </tbody>
 				</table>
 				<h4 style="margin-top:35px">BTC Donation Address</h4>
