--- a/client/roadmap.html
+++ b/client/roadmap.html
@@ -8,6 +8,7 @@
 			<ul>
 				<li>Add shoutbox (basic chat)</li>
 				<li>Integrate RocketChat (Slack-style chat)</li>
+				<li>iOS and Android apps</li>
 				<li>Add a wiki</li>
 				<li>Community rating of tasks</li>
 			</ul>
