--- a/freeuber-action.html
+++ b/freeuber-action.html
@@ -1,6 +1,11 @@
 <head>
   <title>FREE UBER</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta property="og:url" content="http://action.freeuber.org"/>
+  <meta property="og:title" content="FREE UBER"/>
+  <meta property="og:image" content="http://action.freeuber.org/images/fbbanner.jpg"/>
+  <meta property="og:site_name" content="FreeUber.org"/>
+  <meta property="og:description" content="Uber is now illegal in Portsmouth. We're fighting back. Join our core team and earn bitcoin for activism."/>
   <script src="/components/material-design-lite/material.js"></script>
   <link href="/components/material-design-lite/material.css" rel="stylesheet" type="text/css">
 </head>
