leaderboard etc update 9/24

--- a/client/leaderboards.html
+++ b/client/leaderboards.html
@@ -6,7 +6,7 @@
 	  <div class="mdl-card__supporting-text">	    
 	    <center>
 	    	<h4>Top Activists</h4>
-	    	<p>System launched 9/22/15 @ 4pm. No tasks submitted so far. Who will be first?</p>
+	    	<p>Individual breakdowns of who did what task will go live by midnight Friday 9/25.</p>
 				<table class="mdl-data-table mdl-shadow--2dp">
 				  <thead>
 				    <tr>
@@ -16,12 +16,50 @@
 				  </thead>
 				  <tbody>
 				    <tr>
-				      <td style="text-align:center"><i>Your name here?</i></td>
-				      <td style="text-align:center">0</td>
+				      <td style="text-align:center">Christopher David [m]</td>
+				      <td style="text-align:center">280</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">UberDudeNH</td>
+				      <td style="text-align:center">250</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">thesalzereffect</td>
+				      <td style="text-align:center">40</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">Anarchist</td>
+				      <td style="text-align:center">32</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">ShireDude</td>
+				      <td style="text-align:center">20</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">NHLiberty</td>
+				      <td style="text-align:center">15</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">Empact</td>
+				      <td style="text-align:center">10</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">Joe F</td>
+				      <td style="text-align:center">10</td>
+				    </tr>
+				    <tr>
+				      <td style="text-align:center">mobiltune</td>
+				      <td style="text-align:center">5</td>
+				    </tr>				    
+				    <tr>
+				      <td style="text-align:center">ragnar</td>
+				      <td style="text-align:center">5</td>
 				    </tr>
 				  </tbody>
 				</table>
-				<p style="margin-top:15px">Points will be updated manually at least once per day. Eventually they will be allocated instantly via community moderation.</p>
+				<p style="margin-top:15px"><i>[m] - Moderator: Gets no bitcoin/prizes</i></p>
+
+				<p>Points will be updated manually at least once per day. Eventually they will be allocated instantly via community moderation.</p>
 			</center>
 	  </div>
 	</div>
