--- a/client/mission.html
+++ b/client/mission.html
@@ -8,6 +8,7 @@
 	    	<h4>Overturn Portsmouth's new transportation ordinance. Keep politicians' hands off Uber and other ride-sharers.</h4>
 	    	<p>We'll do that by mobilizing community support for Uber and persuading the city council to remove the obstacles they created which currently make Uber illegal in Portsmouth.</p>
 	    	<p>See the <a href="http://freeuber.org/">FREE UBER homepage</a> for the full situation.</p>
+	    	<h4><a href="http://www.seacoastonline.com/article/20150923/NEWS/150929582" target="_blank">FREE UBER makes the front page of the Portsmouth Herald!</a></h4>
 			</center>
 	  </div>
 	</div>
