--- a/client/prizes.html
+++ b/client/prizes.html
@@ -8,7 +8,9 @@
 	    <p style="font-size:18px">~{{ prizepoolUSD }}</p>
 	    <p><strong>Points Exchange Rate:<br />100 points = 0.01 BTC (~$2.30)</strong></p>
 	    <hr>
-	    <p>The prize pool will be distributed proportionally based on points for tasks, about once per week. Exchange rate will not fall below 100=0.01 in the current system. Subject to change when we eventually implement dynamic community voting. See <a href="#roadmap" style="text-decoration:none">roadmap</a> below.</p>
+	    <p style="font-weight:bold">If you're on the leaderboard you can cash out your bitcoin anytime. That will soon be all done through this dashboard, for now it's manual. Email freeubernh@gmail.com with your preferred bitcoin address from the email address you used to sign up for FreeUber. If you didn't give an email, create a custom task and include address there. Note, if exchange rate ever raises in the future, that rate will be applied retroactively to all previous tasks, so no need to horde points waiting for a rate increase.</p>
+	    <hr>
+	    <p>The prize pool will be distributed proportionally based on points for tasks. Exchange rate will not fall below 100=0.01 in the current system. Subject to change when we eventually implement dynamic community voting. See <a href="#roadmap" style="text-decoration:none">roadmap</a> below.</p>
 	    <hr>
 	    <p>Donations to the prize pool are welcome. 100% of donations will be distributed to activists as described above. <a href="mailto:freeubernh@gmail.com">Email us</a> your name to be credited below. Thank you!</p>	    
 	    <h4>Top Donors</h4>
@@ -22,6 +24,11 @@
 				    </tr>
 				  </thead>
 				  <tbody>
+				    <tr>
+				      <td style="text-align:center">Ben Woosley</td>
+				      <td style="text-align:center">9/24/15</td>
+				      <td style="text-align:center">1</td>
+				    </tr>
 				    <tr>
 				      <td style="text-align:center">Tom Hudson</td>
 				      <td style="text-align:center">9/21/15</td>
