--- a/client/reportTask.html
+++ b/client/reportTask.html
@@ -13,7 +13,9 @@
 					<select name="task" id="task">
 					  <option value="p-callcc">Call a Portsmouth city councilor</option>
 					  <option value="p-flyer">Post a flyer in Portsmouth area</option>
-					  <option value="fbshare">Share FREE UBER on Facebook</option>
+					  <option value="fbtshare">Share FREE UBER on Facebook or Twitter</option>
+					  <option value="newscomment">Comment on SeacoastOnline.com Uber article</option>
+					  <option value="unh-flyer">Post a flyer at UNH</option>
 					  <option value="p-giveride">Drive for Uber: give a ride originating in Portsmouth</option>
 					  <option value="recruitrider">Recruit a new Uber rider</option>
 					  <option value="bizflyer">Get a local business to prominently display a flyer</option>
