--- a/client/tasks.html
+++ b/client/tasks.html
@@ -3,8 +3,10 @@
 	  <div class="mdl-card__title mdl-card--expand">
 	    <h2 class="mdl-card__title-text">Tasks</h2>
 	  </div>
+
 	  <div class="mdl-card__supporting-text">
 	  	<center>
+	  	<p style="color:#000"><strong>Bold = New</strong></p>
 			<table class="mdl-data-table mdl-shadow--2dp">
 			  <thead>
 			    <tr>
@@ -20,14 +22,24 @@
 			      <td style="text-align:center">5</td>
 			    </tr>
 			    <tr>
-			      <td style="text-align:center">Post a flyer in Portsmouth area</td>
+			      <td style="text-align:center">Post <a href="http://action.freeuber.org/flyer1.pdf" target="_blank">a flyer</a> in Portsmouth area</td>
 			      <td style="text-align:center">50 per week</td>
 			      <td style="text-align:center">5</td>
 			    </tr>
 			    <tr>
-			      <td style="text-align:center">Share FREE UBER on Facebook</td>
+			      <td style="text-align:center">Share FREE UBER on Facebook <strong>or Twitter</strong></td>
 			      <td style="text-align:center">3 per day</td>
 			      <td style="text-align:center">5</td>
+			    </tr>
+			    <tr style="font-weight:bold">
+			      <td style="text-align:center">Comment on SeacoastOnline.com Uber article</td>
+			      <td style="text-align:center">3 per day</td>
+			      <td style="text-align:center">5</td>
+			    </tr>
+			    <tr style="font-weight:bold">
+			      <td style="text-align:center">Post <a href="http://action.freeuber.org/flyer1.pdf" target="_blank">a flyer</a> at UNH</td>
+			      <td style="text-align:center">20 per week</td>
+			      <td style="text-align:center">10</td>
 			    </tr>
 			    <tr>
 			      <td style="text-align:center">Drive for Uber: give a ride<br />originating in Portsmouth</td>
